added deploy job in circleci config

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
             background-color: yellow;
             bottom: 0;
         }
+        html {
+            background-color: blue;
+        }
         
     </style>
     <link rel="stylesheet" type="text/css" href="final.css">
