background color coral, dockerfile contains bind flag

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             bottom: 0;
         }
         html {
-            background-color: orange;
+            background-color: coral;
         }
         
     </style>
