--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             bottom: 0;
         }
         html {
-            background-color: salmon;
+            background-color: blue;
         }
 
     </style>
